<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Camera Sample</string>
<string name="color_effect">Color Effects</string>
<string name="white_balance">White Balance</string>
<string name="app_desc">Sample camera application from www.androiddevblog.net\nA sample camera applicaiton to demonstrate the use of camera effects.\n\nFor more infromation please visit:\nhttp://www.androiddevblog.net\n</string>
<string name="start_application">Start camera, action, cut :)</string>

    <string name="audioActivity">Audio Recording</string>
    <string name="videoActivity">Video Recording</string>
    <string name="playActivity">Playback</string>

    <string-array name="activities">
        <item name="audio">@string/audioActivity</item>
        <item name="video">@string/videoActivity</item>
    </string-array>

    <string name="recordBtn">Record</string>
    <string name="stopRecordBtn">Stop</string>
    <string name="playBtn">Play</string>

    <string name="noExtStorageAvailable">External storage is unavailable</string>
    <string name="recordingError">Error recording audio</string>
    <string name="saveRecordError">Error saving audio record</string>
    <string name="videoRecordingError">Recording video failed</string>
    <string name="my_video">my_video</string>
    <string name="someDescription">someDescription</string>
    <string name="camera">Camera</string>
    <string name="camera_front">Using Front Camera</string>
    <string name="camera_back">Using Back Camera</string>
    <string name="video_quality">Video Quality</string>
    <string name="video_quality_summary">Storing %s videos</string>
    <string name="video_orientation">Video Orientation</string>
    <string name="video_folder">Video Folder</string>
    <string name="video_folder_summary">Storing videos in %s</string>
    <string name="flashlight">Enable Flashlight</string>
    <string name="flashlight_summary_off">Flashlight is NOT enabled</string>
    <string name="flashlight_summary_on">Flashlight is enabled</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="show_preview">Show Preview</string>
    <string name="show_notification">Show Notification</string>
    <string name="hide_video">Hide Video</string>
    <string name="hide_video_summary">Videos will be hidden from Gallery</string>
    <string name="hide_video_summary_on">Videos will be hidden from Gallery</string>
    <string name="hide_video_summary_off">Videos will show in Gallery</string>
    <string name="show_preview_summary_off">Preview is off</string>
    <string name="show_preview_summary_on">Preview is on</string>
    <string name="show_notification_summary_off">Notification will NOT show</string>
    <string name="show_notification_summary_on">Notification will show</string>


</resources>
