<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:key="@string/my_video"
        android:summary="@string/someDescription"
        android:title="Some Random Title" >
    </Preference>
    <PreferenceCategory android:title="Video Setting">
        <ListPreference
            android:entries="@array/camera"
            android:title="@string/camera"
            android:key="camera" />
        <ListPreference
                android:entries="@array/video_quality"
                android:title="@string/video_quality"
                android:defaultValue="0"
                android:key="video_quality" />
        <ListPreference
                android:entries="@array/video_orientation"
                android:entryValues="@array/video_orientation_value"
                android:defaultValue="0"
                android:title="@string/video_orientation"
                android:key="video_orientation" />
        <EditTextPreference
            android:key="video_folder"
            android:title="@string/video_folder"
            android:summary="@string/video_folder_summary"
            android:dialogTitle="@string/video_folder" />
        <CheckBoxPreference
                android:title="@string/flashlight"
                android:key="flashlight"
                android:summaryOff="@string/flashlight_summary_off"
                android:summaryOn="@string/flashlight_summary_on"
                android:defaultValue="false"/>

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/notification_settings">
        <CheckBoxPreference
                android:title="@string/show_preview"
                android:key="show_preview"
                android:summaryOff="@string/show_preview_summary_off"
                android:summaryOn="@string/show_preview_summary_on"
                android:defaultValue="false"
                />
        <CheckBoxPreference
                android:title="@string/show_notification"
                android:key="show_notification"
                android:summaryOff="@string/show_notification_summary_off"
                android:summaryOn="@string/show_notification_summary_on"
                android:defaultValue="false"
                />
        <CheckBoxPreference
                android:title="@string/hide_video"
                android:key="hide_video"
                android:summary="@string/hide_video_summary"
                android:summaryOn="@string/hide_video_summary_on"
                android:summaryOff="@string/hide_video_summary_off"
                android:defaultValue="false"
                />
    </PreferenceCategory>
</PreferenceScreen>